--- a/_pages/project.html
+++ b/_pages/project.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "project"
+title: "projects"
 permalink: /projects/
 author_profile: true
 ---
@@ -8,7 +8,7 @@ author_profile: true
 {% include base_path %}
 
 
-{% for post in site.project %}
+{% for post in site.projects %}
   {% include archive-single.html %}
 {% endfor %}
 
